--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="home">
             
                 <div class="herotext">
-                    <h1 class="title"><b>Hi,</b>  </h1>
+                    <h1 class="title"><h1>Hi,  </h1>
                     <h1>I'm Ebuka Ikebudu </h1>
                     <p>I'm a Web Developer/ Student</p>
                     
