--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="./portfolio.css"/>
+    <link rel="stylesheet" href="./Css/portfolio.css"/>
     <link rel="" href="../Images/"/>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
