--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./Css/portfolio.css"/>
-    <link rel="" href="../Images/"/>
+    <link rel="stylesheet" href="https://github.com/Buka58/Css.git"/>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
       </style>  
